--- a/config/static/css/style.css
+++ b/config/static/css/style.css
@@ -654,7 +654,7 @@
 
 /* ----- accounts ----- */
 
-.container-info{
+.container-info {
     background: #F7F7F7;
     margin-top: 50px;
     padding-top: 50px;
@@ -662,7 +662,7 @@
     border-radius: 20px;
 }
 
-.container-info p{
+.container-info p {
     font-size: 20px;
     text-align: center;
 }
@@ -682,7 +682,41 @@
     padding: 15px;
     border-radius: 10px;
 }
-.info-item p{
+
+.info-item p {
     font-size: 20px;
     text-align: left;
+}
+
+.info-item a {
+    text-decoration: none;
+}
+
+.cancel {
+    border: 1px solid #ff5361;
+    padding: 5px;
+    margin-top: 5px;
+    width: 120px;
+    text-align: center;
+    border-radius: 8px;
+    background: #fff;
+    cursor: pointer;
+}
+
+.cancel h3 {
+    color: #ff5361;
+}
+
+.cancel-btn{
+    background: #ff5361;
+    border: 0;
+    outline: none;
+    color: #fff;
+    padding: 10px;
+    width: 270px;
+    border-radius: 8px;
+    font-size: 20px;
+    cursor: pointer;
+    margin-top: 10px;
+    font-weight: 600;
 }
