--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -2,13 +2,20 @@
 
 {% block content %}
 
-<div class="container-login center">
-  <h1>Регистрация</h1>
-  <form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit" class="btn btn-primary btn-block">Зарегистрироваться</button>
-  </form>
+
+<div class="container">
+  <div class="container-login-register">
+    <h1>Регистрация</h1>
+    <form method="post" class="login-register-form">
+      {% csrf_token %}
+      {% for field in form %}
+      <div>
+        {{ field }}
+      </div>
+      {% endfor %}
+      <button type="submit">Регистрация</button>
+    </form>
+  </div>
 </div>
 
 {% endblock %}
