--- a/config/static/css/style.css
+++ b/config/static/css/style.css
@@ -622,7 +622,6 @@
 .detail-left-col h1 {
     color: #333;
     font-weight: 600;
-
 }
 
 .detail-left-col p {
@@ -638,18 +637,17 @@
 .right-col-img {
     border: 1px solid #999;
     border-radius: 12px;
-    padding: 10px;
+    padding: 5px;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-gap: 2%;
-
 }
 
 .gallery-img {
-    border-radius: 12px;
+    border-radius: 15px;
     width: 100%;
     height: 170px;
     object-fit: cover;
+    padding: 3px 5px;
 }
 
 /* ----- accounts ----- */
