--- a/config/static/css/style_home.css
+++ b/config/static/css/style_home.css
@@ -11,7 +11,7 @@
     width: 100%;
     background-image:
         linear-gradient(rgba(0, 0, 0, 0.3),
-        rgba(0, 0, 0, 0.3)),
+            rgba(0, 0, 0, 0.3)),
         url("/static/images/gamsutl.png");
     background-size: cover;
     background-position: center;
@@ -66,6 +66,10 @@ nav {
     color: #fff;
     text-align: center;
     padding-top: 22%;
+}
+
+nav .fa-bars {
+    display: none;
 }
 
 .search-bar {
@@ -131,6 +135,7 @@ nav {
     border-radius: 10px;
     width: 223px;
     height: 150px;
+    object-fit: cover;
 }
 
 .places div {
@@ -155,7 +160,7 @@ nav {
     margin-bottom: 30px;
 }
 
-.locality a{
+.locality a {
     text-decoration: none;
 }
 
@@ -164,6 +169,7 @@ nav {
     border-radius: 10px;
     width: 223px;
     height: 150px;
+    object-fit: cover;
 }
 
 .locality h3 {
@@ -185,4 +191,183 @@ nav {
     font-size: 28px;
     margin-bottom: 30px;
     font-weight: 500;
+}
+
+/* ----------for small screen devices ( up to 1280px) ---------- */
+
+@media (max-width: 1280px) {
+    .logo {
+        position: fixed;
+        top: 12px;
+        left: 7%;
+    }
+
+    nav .fa-bars {
+        display: block;
+        position: fixed;
+        top: 12px;
+        right: 7%;
+        color: #fff;
+        font-size: 28px;
+    }
+
+    nav {
+        position: fixed;
+        top: 0;
+        z-index: 100;
+        display: inline-block;
+        width: 100%;
+        padding: 50px 7% 0;
+        background: #000;
+        text-align: right;
+        max-height: 50px;
+        overflow: hidden;
+        transition: max-height 0.5s;
+    }
+
+    nav .nav-links {
+        margin-top: 50px;
+    }
+
+    nav .nav-links li {
+        margin: 15px 0;
+        display: block;
+    }
+
+    .nav-btn {
+        display: inline-block;
+    }
+
+    .nav-btn li {
+        margin: 15px 0 30px 0;
+        display: block;
+    }
+
+    .hidemenu {
+        max-height: 300px;
+    }
+
+    .header h1 {
+        padding-top: 300px;
+        font-size: 7vw;
+    }
+
+    .search-bar {
+        width: 100%;
+    }
+
+    .search-bar form {
+        display: flex;
+        align-items: center;
+        flex-wrap: wrap;
+    }
+
+    .search-bar form input {
+        display: block;
+        border: 0;
+        outline: none;
+        background: transparent;
+    }
+
+    .search-bar form button img {
+        width: 15px;
+        margin-top: 7px;
+    }
+
+    .location-input {
+        flex: 1;
+    }
+
+    .search-bar form label {
+        font-weight: 600;
+    }
+
+    .sub-title {
+        font-size: 3.5vw;
+    }
+
+    .places div img {
+        width: 100%;
+    }
+
+    .locality div img {
+        width: 100%;
+    }
+
+    .about-msg {
+        font-size: 15px;
+    }
+}
+
+/* ----------for small screen devices ( up to 900px) ---------- */
+
+@media (max-width: 900px) {
+    .header h1 {
+        padding-top: 200px;
+    }
+
+    .search-bar form {
+        display: block;
+    }
+
+    .search-bar form input {
+        border-bottom: 1px solid #ddd;
+        width: 100%;
+        margin-bottom: 20px;
+        margin-top: 10px;
+        padding-bottom: 10px;
+    }
+
+    .search-bar {
+        width: 70%;
+        margin: 30px auto;
+        padding: 20px 10px 30px;
+        border-radius: 5px;
+        position: relative;
+    }
+
+    .search-bar form button {
+        position: absolute;
+        bottom: 0;
+        left: 50%;
+        transform: translate(-50%, 50%);
+    }
+
+    .sub-title {
+        font-size: 4.5vw;
+    }
+}
+
+/* ----------for small screen devices ( up to 700px) ---------- */
+@media (max-width: 700px) {
+    .search-bar {
+        width: 90%;
+    }
+
+    .sub-title {
+        font-size: 6vw;
+    }
+}
+
+/* ----------for small screen devices ( up to 310px) ---------- */
+@media (max-width: 310px) {
+    .search-bar {
+        width: 100%;
+    }
+
+    .sub-title {
+        font-size: 7vw;
+    }
+
+    .flatpickr-calendar{
+        font-size: 12px;
+        width: 280px;
+    }
+    .flatpickr-weekdays{
+        width: 90%;
+    }
+    .dayContainer{
+        min-width: 260px;
+        max-width: 280px;
+    }
 }
