--- a/blogs/templates/blogs/places_list.html
+++ b/blogs/templates/blogs/places_list.html
@@ -5,9 +5,9 @@
 {% block content %}
 
 <div class="container">
-  <h1>Интересные места в Гунибском районе</h1>
   <div class="list-container">
-  {% for place in page_obj.object_list %}
+    <h1>Интересные места в Гунибском районе</h1>
+    {% for place in page_obj.object_list %}
     <div class="container-left-col">
       <div class="object">
         <div class="object-img">
@@ -33,41 +33,7 @@
     {% endfor%}
   </div>
 
-  <!-- Пагинация -->
-  {% if page_obj.has_other_pages %}
-  <div class="pagination">
-
-    {% if page_obj.has_previous %}
-      <li class="page-item">
-        <a class="page-link" href="?{{ place }}page={{ page_obj.previous_page_number }}">
-          <img src="{% static 'images/arrow.png' %}">
-        </a>
-      </li>
-    {% endif %}
-
-    {% for page in page_obj.paginator.page_range %}
-      {% if page_obj.number == page %}
-        <li class="page-item current">
-          <a class="page-link" href="?page={{ page }}">{{ page }}</a>
-        </li>
-      {% elif page > page_obj.number|add:-3 and page < page_obj.number|add:3 %}
-        <li class="page-item">
-          <a class="page-link" href="?{{ place }}page={{ page }}">{{ page }}</a>
-        </li>
-      {% endif %}
-    {% endfor %}
-
-    {% if page_obj.has_next %}
-      <li class="page-item">
-        <a class="page-link" href="?{{ place }}page={{ page_obj.next_page_number }}">
-          <img src="{% static 'images/arrow.png' %}" class="right-arrow">
-        </a>
-      </li>
-    {% endif %}
-
-  </div>
-  {% endif %}
-  <!-- end Пагинация -->
+  {% include 'inc/_paginator.html' %}
 
 </div>
 {% endblock %}
