--- a/config/static/css/style_navbar.css
+++ b/config/static/css/style_navbar.css
@@ -48,12 +48,28 @@ nav.navbar-white .fa-bars {
     color: #000;
 }
 
-.navbar-white .active::after {
-    background: #ff5361;
+nav .fa-bars {
+    display: none;
 }
 
+.active {
+    position: relative;
+}
+
+.active::after {
+    content: '';
+    background: #ff5361;
+    width: 35px;
+    height: 2px;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: -12px;
+    border-radius: 2px;
+}
 
 /* Кнопка выпадающего списка */
+/* 
 .fa-bars {
     background-color: #fff;
     color: white;
@@ -64,20 +80,17 @@ nav.navbar-white .fa-bars {
     border-radius: 10px;
 }
 
-/* Кнопка выпадающего меню при наведении и фокусировке */
 nav.navbar-white .fa-bars:hover,
 nav.navbar-white .fa-bars:focus {
     background-color: #ff5361;
     color: #fff;
 }
 
-/* Контейнер <div> - необходим для размещения выпадающего содержимого */
 .dropdown {
     position: relative;
     display: inline-block;
 }
 
-/* Выпадающее содержимое (скрыто по умолчанию) */
 .dropdown-content {
     display: none;
     position: absolute;
@@ -87,7 +100,6 @@ nav.navbar-white .fa-bars:focus {
     z-index: 1;
 }
 
-/* Ссылки внутри выпадающего списка */
 .dropdown-content a {
     color: black;
     padding: 12px 16px;
@@ -95,12 +107,72 @@ nav.navbar-white .fa-bars:focus {
     display: block;
 }
 
-/* Изменение цвета выпадающих ссылок при наведении курсора */
 .dropdown-content a:hover {
     background-color: #ddd
 }
 
-/* Показать выпадающее меню (используйте JS, чтобы добавить этот класс .dropdown-content содержимого, когда пользователь нажимает на кнопку выпадающего списка) */
 .show {
     display: block;
+}  */
+
+/* ----------for small screen devices ( up to 1280px) ---------- */
+
+@media (max-width: 1280px) {
+    .logo {
+        position: fixed;
+        top: 12px;
+        left: 7%;
+    }
+
+    nav .fa-bars {
+        display: block;
+        position: fixed;
+        top: 12px;
+        right: 7%;
+        color: #fff;
+        font-size: 28px;
+    }
+
+    nav {
+        position: fixed;
+        top: 0;
+        z-index: 100;
+        display: inline-block;
+        width: 100%;
+        padding: 50px 7% 0;
+        background: #000;
+        text-align: right;
+        max-height: 50px;
+        overflow: hidden;
+        transition: max-height 0.5s;
+    }
+
+    nav .nav-links {
+        margin-top: 50px;
+    }
+
+    nav .nav-links li {
+        margin: 15px 0;
+        display: block;
+    }
+
+    .active::after {
+        width: 25px;
+        left: -40px;
+        transform: translate(0, 50%);
+        bottom: 50%;
+    }
+
+    .nav-btn {
+        display: inline-block;
+    }
+
+    .nav-btn li {
+        margin: 15px 0 30px 0;
+        display: block;
+    }
+
+    .hidemenu {
+        max-height: 300px;
+    }
 }
