--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="{% static 'lightbox/css/lightbox.min.css' %}">
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
   <link rel="stylesheet" href="{% static 'css/style_navbar.css' %}">
+  <link rel="stylesheet" href="{% static 'css/style_paginator.css' %}">
   <link rel="stylesheet" href="{% static 'css/style_footer.css' %}">
   <title>{% block title %} JustTravel {% endblock %}</title>
 </head>
@@ -31,14 +32,16 @@
 
   {% include 'inc/_footer.html' %}
 
+  <script src="{% static 'js/jquery.min.js' %}"></script>
   <script src="{% static 'js/scripts.js' %}"></script>
+  <script src="{% static 'js/active.js' %}"></script>
   <!-- flatpickr -->
   <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
   <script src="https://npmcdn.com/flatpickr/dist/flatpickr.min.js"></script>
   <script src="https://npmcdn.com/flatpickr/dist/l10n/ru.js"></script>
   <script src="{% static 'js/flatpickr-conf.js' %}"></script>
   <!-- lightbox -->
-  <script src="{% static 'lightbox/js/lightbox-plus-jquery.min.js' %}"></script>
+  <script src="{% static 'lightbox/js/lightbox.min.js' %}"></script>
   <!-- fontawesome -->
   <script src="https://kit.fontawesome.com/4f4432713b.js" crossorigin="anonymous"></script>
 
