--- a/config/static/css/style.css
+++ b/config/static/css/style.css
@@ -936,6 +936,7 @@
         padding: 5px;
         width: 240px;
     }
+
     .modal-header .closeBtn {
         right: 20px;
     }
@@ -958,7 +959,7 @@
 /* ----- locality detail / place detail ----- */
 
 .detail-container {
-    margin-top: 50px;
+    margin-top: 30px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -1006,6 +1007,95 @@
     height: 170px;
     object-fit: cover;
     padding: 3px 5px;
+}
+
+/* ----------for small screen devices ( up to 1080px) ---------- */
+@media (max-width: 1280px) {
+    .detail-container {
+        margin-top: 70px;
+    }
+}
+
+/* ----------for small screen devices ( up to 1080px) ---------- */
+@media (max-width: 1080px) {
+    .detail-left-col {
+        flex-basis: 68%;
+    }
+
+    .detail-right-col {
+        flex-basis: 30%;
+        margin-top: 55px;
+    }
+
+    .detail-left-col h1 {
+        font-size: 25px;
+    }
+
+    .detail-left-col p {
+        line-height: 1.3;
+        font-size: 18px;
+    }
+
+    .right-col-img {
+        padding: 3px;
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+}
+
+/* ----------for small screen devices ( up to 700px) ---------- */
+@media (max-width: 700px) {
+    .detail-left-col {
+        flex-basis: 73%;
+    }
+
+    .detail-right-col {
+        flex-basis: 25%;
+    }
+
+    .right-col-img {
+        padding: 3px;
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .gallery-img {
+        border-radius: 15px;
+        height: 100px;
+        padding: 3px 5px;
+    }
+}
+
+/* ----------for small screen devices ( up to 500px) ---------- */
+@media (max-width: 500px) {
+    .detail-container {
+        margin-top: 70px;
+        display: block;
+    }
+
+    .container .detail-left-col h1 {
+        padding-top: 25px;
+        font-size: 22px;
+    }
+
+    .detail-right-col {
+        margin-top: 25px;
+    }
+
+    .detail-left-col p {
+        line-height: 1.2;
+        font-size: 16px;
+    }
+
+    .right-col-img {
+        padding: 2px;
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .gallery-img {
+        border-radius: 15px;
+        height: 120px;
+        padding: 2px 4px;
+    }
 }
 
 /* ----- accounts ----- */
