--- a/templates/base.html
+++ b/templates/base.html
@@ -33,8 +33,8 @@
   {% include 'inc/_footer.html' %}
 
   <script src="{% static 'js/jquery.min.js' %}"></script>
+  <script src="{% static 'js/jquery.maskedinput.min.js' %}"></script>
   <script src="{% static 'js/scripts.js' %}"></script>
-  <script src="{% static 'js/active.js' %}"></script>
   <!-- flatpickr -->
   <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
   <script src="https://npmcdn.com/flatpickr/dist/flatpickr.min.js"></script>
