--- a/blogs/templates/blogs/home.html
+++ b/blogs/templates/blogs/home.html
@@ -24,6 +24,14 @@
       </ul>
       <ul class='nav-btn'>
         {% if request.user.is_authenticated %}
+        <li>
+          <a href="{% url 'accounts:account' %}">
+            <div class="account-btn">
+              <div><img src="{% static 'images/menu.png' %}"></div>
+              <div><img src="{% static 'images/user.png' %}"></div>
+            </div>
+          </a>
+        </li>
         <!-- <li><a href="{% url 'rooms:create_room' %}" class="create_room-btn">Сдайте жилье</a></li> -->
         <li><a href="{% url 'accounts:logout' %}" class="logout-btn">Выход</a></li>
         {% else %}
@@ -31,7 +39,7 @@
         <li><a href="{% url 'accounts:register' %}" class="register-btn">Регистрация</a></li>
         {% endif %}
       </ul>
-        <i class="fa-solid fa-bars" onclick="togglebtn()"></i>
+      <i class="fa-solid fa-bars" onclick="togglebtn()"></i>
     </nav>
     <div class="container">
       <h1></h1>
@@ -109,16 +117,16 @@
 
   <script src="https://kit.fontawesome.com/4f4432713b.js" crossorigin="anonymous"></script>
   <script src="{% static 'js/scripts.js' %}"></script>
-  
+
   <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
   <script src="https://npmcdn.com/flatpickr/dist/l10n/ru.js"></script>
   <script>
     config = {
-    "locale": "ru",
-    // dateFormat: "Y-m-d",
-    dateFormat: "d-m-Y",
-    minDate: "today",
-    disableMobile: "true",
+      "locale": "ru",
+      // dateFormat: "Y-m-d",
+      dateFormat: "d-m-Y",
+      minDate: "today",
+      disableMobile: "true",
     }
     datepickr = flatpickr("input[type=date]", config);
   </script>
