--- a/config/static/css/style_navbar.css
+++ b/config/static/css/style_navbar.css
@@ -68,52 +68,28 @@ nav .fa-bars {
     border-radius: 2px;
 }
 
-/* Кнопка выпадающего списка */
-/* 
-.fa-bars {
-    background-color: #fff;
-    color: white;
-    padding: 8px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-    border-radius: 10px;
-}
-
-nav.navbar-white .fa-bars:hover,
-nav.navbar-white .fa-bars:focus {
-    background-color: #ff5361;
-    color: #fff;
-}
-
-.dropdown {
+.account-btn{
+    /* border: 1px solid #ff5361; */
+    border: 1px solid #ff5361;
+    border-radius: 20px;
+    height: 32px;
+    width: 60px;
     position: relative;
+    /* background: #ccc; */
+}
+.nav-btn{
+    display: flex;
+    align-items: center;
+}
+.nav-btn div{
     display: inline-block;
+    text-align: center;
 }
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1;
+.account-btn img{
+    width: 18px;
+    height: 18px;
+    margin: 6px 0;
 }
-
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-
-.dropdown-content a:hover {
-    background-color: #ddd
-}
-
-.show {
-    display: block;
-}  */
 
 /* ----------for small screen devices ( up to 1280px) ---------- */
 
@@ -168,11 +144,11 @@ nav.navbar-white .fa-bars:focus {
     }
 
     .nav-btn li {
-        margin: 15px 0 30px 0;
+        margin: 15px 0 20px 0;
         display: block;
     }
 
     .hidemenu {
-        max-height: 300px;
+        max-height: 350px;
     }
 }
