--- a/accounts/templates/accounts/account.html
+++ b/accounts/templates/accounts/account.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 
+{% load account_tag %}
 
 {% block title %}
 Личный кабинет
@@ -7,37 +8,68 @@
 
 {% block content %}
 
-<nav id="navBar" class="navbar-white">
-  {% if request.user.is_authenticated %}
-  <ul class="nav-links">
-    <li>
-      <a href="{% url 'accounts:user_active_reservs' %}">
-        {% if active_reservs %}
-        Активных бронирований: {{ active_reservs|length }}
-        {% endif %}
-      </a>
-    </li>
+{% account_nav %}
 
-    <li>
-      <a href="{% url 'accounts:user_inactive_reservs' %}">
-        {% if inactive_reservs %}
-        Неактивных бронирований: {{ inactive_reservs|length }}
-        {% endif %}
-      </a>
-    </li>
+<div class="container">
+  <div class="container-info">
+    
+    {% if active_reservs %}
+    <div class="info">
+      {% for reserv in active_reservs|dictsort:"start_date" %}
+      <div class="info-item">
+        <a href="{{ reserv.apartment.get_absolute_url }}">
+          <h2>{{ reserv.apartment }}</h2>
+        </a>
+        <p>Прибытие: {{ reserv.start_date }}</p>
+        <p>Выезд: {{ reserv.end_date }}</p>
+        <p>Всего ночей: {{ reserv.days_total }}</p>
+        <p>Итого к оплате: {{ reserv.price_total|floatformat:"0g" }} р.</p>
+        <p>Оплата наличными на месте.</p>
+        <div class="cancel">
+          <a href="{{ reserv.get_absolute_url }}">
+            <h3>Отменить</h3>
+          </a>
+        </div>
+      </div>
+      {% endfor %}
+    </div>
+    {% endif %}
 
-    <li>
-      <a href="{% url 'accounts:user_canceled_reservs' %}">
-        {% if canceled_reservs %}
-        Отмененных бронирований: {{ canceled_reservs|length }}
-        {% endif %}
-      </a>
-    </li>
-  </ul>
-  <ul class='nav-btn'>
-    <li><a href="{% url 'accounts:personal_data' %}">Личные данные</a></li>
-  </ul>
-  {% endif %}
-</nav>
+    {% if inactive_reservs %}
+    <div class="info">
+      {% for reserv in inactive_reservs|dictsort:"start_date" %}
+      <div class="info-item">
+        <a href="{{ reserv.apartment.get_absolute_url }}">
+          <h2>{{ reserv.apartment }}</h2>
+        </a>
+        <p>Прибытие: {{ reserv.start_date }}</p>
+        <p>Выезд: {{ reserv.end_date }}</p>
+        <p>Всего ночей: {{ reserv.days_total }}</p>
+        <p>Итого к оплате: {{ reserv.price_total|floatformat:"0g" }} р.</p>
+        <p>Оплата наличными на месте.</p>
+      </div>
+      {% endfor %}
+    </div>
+    {% endif %}
+
+    {% if canceled_reservs %}
+    <div class="info">
+      {% for reserv in canceled_reservs|dictsort:"start_date" %}
+      <div class="info-item">
+        <a href="{{ reserv.apartment.get_absolute_url }}">
+          <h2>{{ reserv.apartment }}</h2>
+        </a>
+        <p>Прибытие: {{ reserv.start_date }}</p>
+        <p>Выезд: {{ reserv.end_date }}</p>
+        <p>Всего ночей: {{ reserv.days_total }}</p>
+        <p>Итого к оплате: {{ reserv.price_total|floatformat:"0g" }} р.</p>
+        <p>Оплата наличными на месте.</p>
+      </div>
+      {% endfor %}
+    </div>
+    {% endif %}
+
+  </div>
+</div>
 
 {% endblock %}
