--- a/landlord/templates/landlord/account.html
+++ b/landlord/templates/landlord/account.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 
+{% load landlord_tag %}
 
 {% block title %}
 Личный кабинет
@@ -7,38 +8,6 @@
 
 {% block content %}
 
-<nav id="navBar" class="navbar-white">
-  {% if request.user.is_authenticated %}
-  <ul class="nav-links">
-    <li>
-      <a href="{% url 'landlord:leaving' %}">
-        Выезжают: ({{ leaving|length }})
-      </a>
-    </li>
-
-    <li>
-      <a href="{% url 'landlord:reside' %}">
-        Проживают: ({{ reside|length }})
-      </a>
-    </li>
-
-    <li>
-      <a href="{% url 'landlord:will_arrive_soon' %}">
-        Скоро приедут: ({{ will_arrive_soon|length }})
-      </a>
-    </li>
-
-    <li>
-      <a href="{% url 'landlord:upcoming' %}">
-        Предстоящие: ({{ upcoming|length }})
-      </a>
-    </li>
-
-  </ul>
-  <ul class='nav-btn'>
-    <li><a href="{% url 'accounts:personal_data' %}">Личные данные</a></li>
-  </ul>
-  {% endif %}
-</nav>
+{% landlord_nav %}
 
 {% endblock %}
